...
                setContact(it)
                setContactHasError(false)
            },
            label = { Text(text = stringResource(string.new_contact)) },
            isError = contactHasError,
            modifier = modifier
                .testTag("newContactTextField")
                .focusRequester(focusRequester)
        )
        AnimatedVisibility(visible = contactHasError) {
            Text(
                text = stringResource(string.error_contact_is_not_valid_jabber_id),
                color = MaterialTheme.colorScheme.error,
...
            val contactHasError = !contact.isValidJid
            setContactHasError(contactHasError)
            if (!contactHasError) {
                addContact(contact)
            }
        },
        modifier = Modifier.testTag("addContactButton")
    ) {
        Text(text = stringResource(string.add))
    }
}

